--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,dvipdfmx]{book}
+\documentclass[12pt,dvipdfmx]{jsbook}
 \usepackage{lmodern}
 \usepackage[margin=1in]{geometry}
 \usepackage{amsmath,amssymb,amsfonts,mathtools,amsthm}
