--- a/appendix.tex
+++ b/appendix.tex
@@ -14,7 +14,10 @@
   ここでは簡単のため, $X$の台$\Omega=\supp(X)\subseteq\Real$は有限集合, すなわち$\abs{\Omega}<\infty$と仮定する\footnote{確率変数$X$のとりうる値の集合, すなわち$\qty{x\colon \Pr[X=x]>0}$を$X$の台と呼び, $\supp(X)$と表す.}.
   このとき,
   \begin{align*}
-    \E[X] = \sum_{x\in \Omega} x\Pr[X=x] \ge \sum_{x\in \Omega,x\ge t} x\Pr[X=x] \ge \sum_{x\in \Omega,x\ge t} t\Pr[X=x] = t\Pr[X\ge t]
+    \E[X] &= \sum_{x\in \Omega} x\Pr[X=x] \\
+    &\ge \sum_{x\in \Omega,x\ge t} x\Pr[X=x] \\
+    &\ge \sum_{x\in \Omega,x\ge t} t\Pr[X=x] \\
+    &= t\Pr[X\ge t]
   \end{align*}
   を整理すると主張を得る.
 \end{proof}
