ギャップ増幅補題の章を「PCP定理の証明」に改名し、内容を整理。$q_0$-CSPの構成に関する詳細を明確化し、PCP定理の証明を追加。文書全体の整合性を向上させるための修正を実施し、PDFおよびSynctexファイルを更新。BiberログとLaTeXmkデータベースを最新の状態に保つための調整を行った。

--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@
 \input{introduction.tex}
 \input{weak_PCP.tex}
 \input{CSP.tex}
-\input{gap_amplification.tex}
+\input{proof_of_PCP.tex}
 
 \printbibliography
 \appendix
